# modbuswrappersLog

./: .gitignore  CMakeLists.txt  conanfile.py  config.json
cmake/: modbuswrappers-config.cmake.in  utils.cmake
cmake/configs/: config.cmake  feature_flags.cmake  feature_flags_settings.cmake  settings.cmake
cmake/routine/: copy_deps.cmake
conan/scripts_linux/: add_remote_server.sh  create_conan_package.sh  create_profiles.sh  install_deps.sh  upload_conan_package.sh
conan/scripts_windows/: create_conan_package.bat  create_profiles.bat  install_deps.bat  upload_conan_package.bat
envs/: conan.cmake  docker-linux.cmake  env-chooser.cmake  linux.cmake  windows.cmake
examples/: CMakeLists.txt
examples/change_address_example_1/: CMakeLists.txt  main.cpp
examples/enabled_slave_example/: CMakeLists.txt  main.cpp  singlewritemodbuswrapper.cpp  singlewritemodbuswrapper.h
examples/example_1/: CMakeLists.txt  main.cpp
examples/logger_addition/: CMakeLists.txt  main.cpp
examples/multiple_write_example/: CMakeLists.txt  main.cpp
examples/multithread_example/: CMakeLists.txt  main.cpp
examples/reconnect-example/: CMakeLists.txt  main.cpp
examples/service-example-1/: CMakeLists.txt  main.cpp
include/modbuswrappers/: modbuswrapper.h  modbuswrapperfactory.h  modbuswrapperstorage.h
include/modbuswrappers/extra/: modbus_slave_factory.h  modbus_slave_wrapper.h  modbus_slave_wrapper_factory.h
include/modbuswrappers/extra/impls/: modbus_slave_wrapper_impl1.h
include/modbuswrappers/extra/modbus_slave_factory_impls/: modbus_slave_factory_impl1.h
include/modbuswrappers/extra/modbus_slave_wrapper_factory_impls/: modbus_slave_wrapper_factory_impl1.h
include/modbuswrappers/factories/: fullmodbuswrapperfactoryimpl1.h  fullmodbuswrapperfactorymock1.h
include/modbuswrappers/factories/modbuswrapperoneclient/: modbuswrapperoneclientfactory.h
include/modbuswrappers/factories/modbuswrapperoneclient/impls/: modbuswrapperoneclientfactoryimpl1.h
include/modbuswrappers/logaddition/: modbuslogger.h  modbuslogwrapper.h  modbuslogwrapperfactory.h
include/modbuswrappers/mocks/: modbuswrappermock1.h  modbuswrappermock2.h  modbuswrappermockfactory.h
include/modbuswrappers/modbusasyncclientwrapper/: abstractmodbusasyncclientwrapper.h  modbusasyncclientwrapper.h  modbusasyncclientwrapper2.h  modbusasyncclientwrapperfactory.h  modbuswrapperpoll.h
include/modbuswrappers/modbusclientwrapper/: modbusclientdividablewrapper.h  modbusclientdividablewrapperfactory.h  modbusclientwrapper.h  modbusclientwrapperconnectedstate.h  modbusclientwrapperdisconnectedstate.h  modbusclientwrapperfactory.h  modbusclientwrappernotconnectedstate.h  modbustcpclientwrapperfactory.h
include/modbuswrappers/modbuspostponedwritewrapper/: modbuspostponedwritewrapper.h  modbuspostponedwritewrapperfactory.h
include/modbuswrappers/modbusprioritywrapper/: modbusprioritywrapper.h  modbusprioritywrapperfactory.h
include/modbuswrappers/modbuswrappermodbusiddecorator/: modbus_client_modbus_id_decorator_factory_impl2.h  modbus_client_modbus_id_decorator_impl2.h  modbusclientmodbusiddecorator.h  modbusclientmodbusiddecoratorfactory.h
include/modbuswrappers/service/: modbus_wrapper_model.h  modbus_wrapper_service.h
include/modbuswrappers/service/modbus_wrapper_service_impls/: modbus_wrapper_service_impl1.h
include/modbuswrappers/storages/: modbuswrapperstorageimpl1.h
include/modbuswrappers/tangoclientwrappers/: modbustangoclientwrapperimpl1.h
settings/: config.h.in  settings.h.in
src/modbuswrappers/: modbuswrapper.cpp
src/modbuswrappers/extra/impls/: modbus_slave_wrapper_impl1.cpp
src/modbuswrappers/extra/modbus_slave_factory_impls/: modbus_slave_factory_impl1.cpp
src/modbuswrappers/extra/modbus_slave_wrapper_factory_impls/: modbus_slave_wrapper_factory_impl1.cpp
src/modbuswrappers/factories/: fullmodbuswrapperfactoryimpl1.cpp  fullmodbuswrapperfactorymock1.cpp
src/modbuswrappers/factories/modbuswrapperoneclient/impls/: modbuswrapperoneclientfactoryimpl1.cpp
src/modbuswrappers/logaddition/: modbuslogger.cpp  modbuslogwrapper.cpp  modbuslogwrapperfactory.cpp
src/modbuswrappers/mocks/: modbuswrappermock1.cpp  modbuswrappermock2.cpp  modbuswrappermockfactory.cpp
src/modbuswrappers/modbusasyncclientwrapper/: modbusasyncclientwrapper.cpp  modbusasyncclientwrapper2.cpp  modbusasyncclientwrapperfactory.cpp  modbuswrapperpoll.cpp
src/modbuswrappers/modbusclientwrapper/: modbusclientdividablewrapper.cpp  modbusclientdividablewrapperfactory.cpp  modbusclientwrapper.cpp  modbusclientwrapperconnectedstate.cpp  modbusclientwrapperdisconnectedstate.cpp  modbusclientwrapperfactory.cpp  modbusclientwrappernotconnectedstate.cpp  modbustcpclientwrapperfactory.cpp
src/modbuswrappers/modbuspostponedwritewrapper/: modbuspostponedwritewrapper.cpp  modbuspostponedwritewrapperfactory.cpp
src/modbuswrappers/modbusprioritywrapper/: modbusprioritywrapper.cpp  modbusprioritywrapperfactory.cpp
src/modbuswrappers/modbuswrappermodbusiddecorator/: modbus_client_modbus_id_decorator_factory_impl2.cpp  modbus_client_modbus_id_decorator_impl2.cpp  modbusclientmodbusiddecorator.cpp  modbusclientmodbusiddecoratorfactory.cpp
src/modbuswrappers/service/: modbus_wrapper_model.cpp  modbus_wrapper_service.cpp
src/modbuswrappers/service/modbus_wrapper_service_impls/: modbus_wrapper_service_impl1.cpp
src/modbuswrappers/storages/: modbuswrapperstorageimpl1.cpp
src/modbuswrappers/tangoclientwrappers/: modbustangoclientwrapperimpl1.cpp
tests/: CMakeLists.txt
tests/tests_name_1/: hello_world.cpp  hello_world_1.cpp
tests/tests_name_2/: hello_world_2.cpp
